*SVN*

* Added JavascriptHelper#update_element_function, which returns a Javascript function (or expression) that'll update a DOM element according to the options passed #933 [mortonda@dgrmm.net]. Examples:

    <%= update_element_function("products", :action => :insert, :position => :bottom, :content => "<p>New product!</p>") %>

    <% update_element_function("products", :action => :replace, :binding => binding) do %>
      <p>Product 1</p>
      <p>Product 2</p>
    <% end %>

* Added :field_name option to DateHelper#select_(year|month|day) to deviate from the year/month/day defaults #1266 [Marcel Molina]

* Added JavascriptHelper#draggable_element and JavascriptHelper#drop_receiving_element to facilitate easy dragging and dropping through the script.aculo.us libraries #1578 [Thomas Fuchs]

* Added that UrlHelper#mail_to will now also encode the default link title #749 [f.svehla@gmail.com]

* Removed the default option of wrap=virtual on FormHelper#text_area to ensure XHTML compatibility #1300 [thomas@columbus.rr.com]

* Adds the ability to include XML CDATA tags using Builder #1563 [Josh Knowles]. Example:

    xml.cdata! "some text" # => <![CDATA[some text]]>

* Added evaluation of <SCRIPT> blocks in content returned to Ajax calls #1577 [Thomas Fuchs/court3nay/Sean Treadway]

* Directly generate paths with a leading slash instead of tacking it on later.  #1543 [Nicholas Seckar]

* Fixed errant parameter modification in functional tests.  #1542 [Nicholas Seckar]

* Routes fail with leading slash #1540 [Nicholas Seckar]

* Added support for graceful error handling of Ajax calls #1217 [Jamis Buck/Thomas Fuchs]. Example:

    link_to_remote(
      "test", 
      :url => { :action => "faulty" }, 
      :update => { :success => "good", :failure => "bad" },
      403 => "alert('Forbidden- got ya!')",
      404 => "alert('Nothing there...?')", 
      :failure => "alert('Unkown error ' + request.status)")
  